<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/textName"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Введить ім'я" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/textType"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/typeInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Введить тип" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/textSize"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/sizeInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Введить розмір"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:text="@string/textMaterial"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/matInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Введить матеріал" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="end">

        <Button
            android:id="@+id/button_push_to_list"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_push" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/list_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </ListView>
    </LinearLayout>
</LinearLayout>

